--- a/styles/flower.css
+++ b/styles/flower.css
@@ -3,27 +3,37 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-.header{
-    display: flex;
-    align-items: center;
+.header {
     background-color: #FCEEF1;
-    margin-bottom: 100px;
 }
 
+.banner {
+    display: flex;
+    align-items: center;
+    max-width: 1100px;
+    margin-bottom: 100px;
+    justify-content: space-between;
+    margin: 0 auto;
+}
 
+.header-item {
+    max-width: 500px;
+}
 
-.first-header{
+.first-header {
     font-size: 30px;
     font-weight: 700;
     max-width: 300px;
-    
+
 }
-.first-description{
+
+.first-description {
     font-size: 15px;
     font-weight: 400;
     /* max-width: 300px; */
 }
-.btn-primary{
+
+.btn-primary {
     border-radius: 5px;
     background: brown;
     color: #fff;
@@ -31,7 +41,8 @@ body {
     font-size: 10px;
     padding: 10px 15px;
 }
-.profile-pic{
+
+.profile-pic {
     max-width: 300px;
 }
 
@@ -39,40 +50,75 @@ body {
 
 /* First Section */
 
-.first-section{
-    /* width: 600px; */
 
+/* width: 600px; */
+
+.first-section{
+    margin-bottom: 150px;
 }
-.first-section-hp{
+
+
+.first-section-hp {
     text-align: center;
 }
-.section-header{
+
+.section-header {
     font-size: 25px;
     font-weight: 700
 }
-.section-description{
+
+.section-description {
     font-size: 10px;
     font-weight: 300;
 }
-.section-image{
+
+.feature-img {
     display: flex;
+    justify-content: center;
+    max-width: 1100px;
+    margin: 0 auto;
     gap: 20px;
-    /* justify-content: space-between; */
-    
 }
-
-.img-head img {
-    width: 200px;
-
-}
-.img-head{
+.feature-img-1{
     text-decoration: underline;
+    padding: 50px 30px 0 30px;
+    margin: 10px;
+    height: 300px;
+    width: 250px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
 }
+.feature-img-2{
+    text-decoration: underline;
+    padding: 50px 30px 0 30px;
+    margin: 10px;
+    height: 300px;
+    width: 250px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+.feature-img-3{
+    text-decoration: underline;
+    padding: 50px 30px 0 30px;
+    margin: 10px;
+    height: 300px;
+    width: 250px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+
 /* First Section End */
 
 /* Skill Section */
 
-.skill-section{
+.skill-section {
+    max-width: 1100px;
+    margin: 0 auto;
     display: flex;
+    justify-content: center;
     gap: 20px;
+    text-align: center;
+}
+.skill img{
+    width: 50px;
 }
