--- a/styles/flower.css
+++ b/styles/flower.css
@@ -53,7 +53,7 @@ body {
 
 /* width: 600px; */
 
-.first-section{
+.first-section {
     margin-bottom: 150px;
 }
 
@@ -79,7 +79,8 @@ body {
     margin: 0 auto;
     gap: 20px;
 }
-.feature-img-1{
+
+.feature-img-1 {
     text-decoration: underline;
     padding: 50px 30px 0 30px;
     margin: 10px;
@@ -88,7 +89,8 @@ body {
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
 }
-.feature-img-2{
+
+.feature-img-2 {
     text-decoration: underline;
     padding: 50px 30px 0 30px;
     margin: 10px;
@@ -97,7 +99,8 @@ body {
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
 }
-.feature-img-3{
+
+.feature-img-3 {
     text-decoration: underline;
     padding: 50px 30px 0 30px;
     margin: 10px;
@@ -118,7 +121,73 @@ body {
     justify-content: center;
     gap: 20px;
     text-align: center;
+    margin-bottom: 100px;
+    background-color: gray;
 }
-.skill img{
+
+.skill img {
     width: 50px;
+}
+
+/* Hot Deal Section */
+
+.text-primary{
+    color: brown;
+}
+.hot-deal-section {
+    background-color: #FCEEF1;
+}
+
+.hot-deal-1 {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    margin-bottom: 100px;
+    justify-content: space-between;
+
+}
+
+/* Instagram-section */
+
+.Instagram-section {
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+
+.IG-Section {
+    text-align: center;
+}
+
+.IMG-Section {
+    display: flex;
+}
+
+.IG-IMG-1 {
+    width: 275px;
+    height: 300px;
+}
+
+.IG-IMG-2 {
+    width: 275px;
+    height: 300px;
+}
+
+.IG-IMG-3 {
+    width: 275px;
+    height: 300px;
+}
+
+.IG-IMG-4 {
+    width: 275px;
+    height: 300px;
+}
+
+/* last-banner */
+
+.last-banner{
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-bottom: 100px;
 }
