--- a/styles/flower.css
+++ b/styles/flower.css
@@ -1,10 +1,18 @@
 /* Header Related Styles */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
 body {
     font-family: "Open Sans", sans-serif;
 }
 
 .header {
     background-color: #FCEEF1;
+    margin-bottom: 100px;
 }
 
 .banner {
@@ -70,6 +78,7 @@ body {
 .section-description {
     font-size: 10px;
     font-weight: 300;
+    margin-bottom: 20px;
 }
 
 .feature-img {
@@ -78,10 +87,12 @@ body {
     max-width: 1100px;
     margin: 0 auto;
     gap: 20px;
+    text-align: center;
 }
-
-.feature-img-1 {
+.feature-img h3 {
     text-decoration: underline;
+}
+.feature-img-1 img{
     padding: 50px 30px 0 30px;
     margin: 10px;
     height: 300px;
@@ -90,8 +101,7 @@ body {
     background: rgba(167, 33, 98, 0.15);
 }
 
-.feature-img-2 {
-    text-decoration: underline;
+.feature-img-2 img{
     padding: 50px 30px 0 30px;
     margin: 10px;
     height: 300px;
@@ -100,8 +110,7 @@ body {
     background: rgba(167, 33, 98, 0.15);
 }
 
-.feature-img-3 {
-    text-decoration: underline;
+.feature-img-3 img{
     padding: 50px 30px 0 30px;
     margin: 10px;
     height: 300px;
@@ -123,6 +132,7 @@ body {
     text-align: center;
     margin-bottom: 100px;
     background-color: gray;
+    padding: 30px 0 30px 0;
 }
 
 .skill img {
@@ -132,7 +142,7 @@ body {
 /* Hot Deal Section */
 
 .text-primary{
-    color: brown;
+    color: purple;
 }
 .hot-deal-section {
     background-color: #FCEEF1;
@@ -162,26 +172,27 @@ body {
 
 .IMG-Section {
     display: flex;
+    gap: 20px;
 }
 
-.IG-IMG-1 {
-    width: 275px;
-    height: 300px;
+.IG-IMG-1 img{
+    width: 260px;
+    height: 250px;
 }
 
-.IG-IMG-2 {
-    width: 275px;
-    height: 300px;
+.IG-IMG-2 img{
+    width: 260px;
+    height: 250px;
 }
 
-.IG-IMG-3 {
-    width: 275px;
-    height: 300px;
+.IG-IMG-3 img{
+    width: 260px;
+    height: 250px;
 }
 
-.IG-IMG-4 {
-    width: 275px;
-    height: 300px;
+.IG-IMG-4 img{
+    width: 260px;
+    height: 250px;
 }
 
 /* last-banner */
@@ -190,4 +201,50 @@ body {
     max-width: 1100px;
     margin: 0 auto;
     margin-bottom: 100px;
+    background-image: url('../images/Rectangle.png');
+    background-size: cover;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-header{
+    font-size: 30px;
+}
+.banner-description{
+    font-size: 10px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+.banner-email{
+    padding: 5px 35px 5px 0;
+}
+
+/* Footer Section */
+.footer-banner{
+    background-color: black;
+    padding: 70px 0 70px 0;
+}
+.footer-tags{
+    max-width: 1100px;
+    margin: 0 auto;
+    text-align: center;
+}
+.footer-head{
+    font-size: 40px;
+    font-weight: 700;
+    color: #fff;
+}
+.footer-description{
+    font-size: 10px;
+    font-weight: 400;
+    color: #fff;
+    margin-bottom: 15px;
+}
+
+.copy-banner{
+    color: #fff;
+    font-size: 15px;
 }
